# DataQualityServices

./: .env  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
output/: anomaly_1a0ba0b0321046268a562a9493a2c39d.csv  anomaly_9299b0b28f7f47dbbce73e2d7f20c6f3.csv  anomaly_95675299b4e04089a4e6a1fd282c5426.csv  dq_77d4f4ff89e6431a92397d00c60ed2a6.csv  dq_78ac2fba83c24ee39c89dbe635362bb8.csv  fti_80cf6f7789b743b28f05c92aa2ba484d.csv  fti_e015303c6ee14eea8abeb888b7028610.csv  imputed_04e328a534804057b44ccc379e95a4c5.csv  imputed_53ed3117941241f6b6ab2a673a2ae5cd.csv  imputed_d302cfdf6e1c4ba0b3e42263af0cdee0.csv
output/xgbod_21d5c6840aea4e3d9eabbb0d7bb375e0/: inliers_no_outliers.xlsx  only_outliers.xlsx  results.csv  results.xlsx
output/xgbod_3dde6dbdb7944cb990e587ab21a8eacd/: inliers_no_outliers.xlsx  only_outliers.csv  only_outliers.xlsx  results.csv  results.xlsx
output/xgbod_41df90404bcf46e0a470783b8ac140be/: inliers_no_outliers.xlsx  only_outliers.xlsx  results.xlsx
output/xgbod_8a4ed87115b44546825385a4d460cf51/: inliers_no_outliers.xlsx  only_outliers.csv  only_outliers.xlsx  results.xlsx
output/xgbod_b067bade73964846a248f28c84b1d791/: inliers_no_outliers.csv  inliers_no_outliers.xlsx  only_outliers.xlsx  results.xlsx
output/xgbod_bcddd913429e4b07bbdf50ae0e46ea2b/: inliers_no_outliers.xlsx  only_outliers.xlsx  results.xlsx
output/xgbod_f0530df23ed744849750aeb5cd1d0953/: inliers_no_outliers.csv  inliers_no_outliers.xlsx  only_outliers.xlsx  results.xlsx
src/aiservices/: app_factory.py  config.py  routes.py  wsgi.py
(+9 files in other folders)
