[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiservices"
version = "0.1.0"
description = "Production Flask REST API for KI-Allianz AI services"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Bhuvneshwar Bajpeyee", email = "bhuvneshwarbajpeyee@hs-aalen.de" }]
license = { text = "Apache-2.0" }
dependencies = [
  "Flask>=3.0.0",
  "gunicorn>=22.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.3.0",
  "authlib>=1.3.0",
  "onnxruntime>=1.18.0",
  "Pillow>=10.0.0",
  "XlsxWriter>=3.2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff", "mypy"]
